--- a/_sass/components/_logo.scss
+++ b/_sass/components/_logo.scss
@@ -5,15 +5,31 @@
   }
   img {
     max-width: unset;
+    height: 100%;
   }
   a {
-    display: block;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: start;
+    align-items: center;
+    gap: 1px;
+  }
+  span {
     width: 100%;
     height: 100%;
+    font-size: 2.4rem;
+    :hover {
+      text-decoration: none;
+    }
+  }
+  :hover {
+    text-decoration: none;
   }
 }
 .logo-mobile {
-  display: block;
+  display: flex;
+  flex-direction: row;
   width: 40px;
   padding: 10px 0 10px 0;
   @include media-breakpoint-up(sm) {
@@ -27,5 +43,8 @@
     display: block;
     width: 100%;
     height: 100%;
+  }
+  span {
+    width: 100%;
   }
 }
